<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frag43"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Fragments.Fragment_11">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <include layout="@layout/back_1"></include>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView65"
            android:layout_marginLeft="108dp"
            android:layout_marginStart="108dp"
            android:layout_marginTop="72dp"
            android:src="@drawable/frag40_img3"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/frag43head"
            android:id="@+id/frag43head"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/imageView65"
            android:layout_alignLeft="@+id/imageView65"
            android:layout_alignStart="@+id/imageView65" />

        <ImageView
            android:layout_width="15dp"
            android:layout_height="20dp"
            android:paddingTop="5dp"
            android:layout_marginTop="10dp"
            android:id="@+id/frag43bul1"
            android:layout_below="@+id/frag43head"
            android:layout_alignLeft="@+id/frag43head"
            android:layout_alignStart="@+id/frag43head"
            android:src="#f7adaf" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/frag43pt1"
            android:id="@+id/frag43pt1"
            android:layout_marginLeft="10dp"
            android:layout_alignTop="@+id/frag43bul1"
            android:layout_toRightOf="@+id/frag43bul1"
            android:layout_toEndOf="@+id/frag43bul1" />

        <ImageView
            android:layout_width="15dp"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:paddingTop="5dp"
            android:id="@+id/frag43bul2"
            android:layout_below="@+id/frag43pt1"
            android:layout_alignLeft="@+id/frag43bul1"
            android:layout_alignStart="@+id/frag43bul1"
            android:src="#f7adaf" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/frag43pt2"
            android:id="@+id/frag43pt2"
            android:layout_alignTop="@+id/frag43bul2"
            android:layout_alignLeft="@+id/frag43pt1"
            android:layout_alignStart="@+id/frag43pt1" />

        <ImageView
            android:layout_width="15dp"
            android:layout_height="20dp"
            android:id="@+id/frag43bul3"
            android:layout_marginTop="10dp"
            android:paddingTop="5dp"
            android:layout_below="@+id/frag43pt2"
            android:layout_alignLeft="@+id/frag43bul2"
            android:layout_alignStart="@+id/frag43bul2"
            android:src="#f7adaf" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/frag43pt3"
            android:id="@+id/frag43pt3"
            android:layout_alignTop="@+id/frag43bul3"
            android:layout_alignLeft="@+id/frag43pt2"
            android:layout_alignStart="@+id/frag43pt2" />

        <ImageView
            android:layout_width="15dp"
            android:layout_height="20dp"
            android:id="@+id/frag43bul4"
            android:paddingTop="5dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/frag43pt3"
            android:layout_alignLeft="@+id/frag43bul3"
            android:layout_alignStart="@+id/frag43bul3"
            android:src="#f7adaf" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/frag43pt4"
            android:id="@+id/frag43pt4"
            android:layout_alignTop="@+id/frag43bul4"
            android:layout_alignLeft="@+id/frag43pt3"
            android:layout_alignStart="@+id/frag43pt3" />

        <ImageView
            android:layout_width="15dp"
            android:layout_height="20dp"
            android:id="@+id/frag43bul5"
            android:layout_marginTop="10dp"
            android:paddingTop="5dp"
            android:layout_below="@+id/frag43pt4"
            android:layout_alignLeft="@+id/frag43bul4"
            android:layout_alignStart="@+id/frag43bul4"
            android:src="#f7adaf" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/frag43pt5"
            android:id="@+id/textView83"
            android:layout_alignTop="@+id/frag43bul5"
            android:layout_alignLeft="@+id/frag43pt4"
            android:layout_alignStart="@+id/frag43pt4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="43"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/textView84"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


    </RelativeLayout>
</FrameLayout>