<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/conk"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Fragments.Fragment_11">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <include layout="@layout/back_1"></include>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView64"
            android:layout_marginLeft="51dp"
            android:layout_marginStart="51dp"
            android:layout_marginTop="66dp"
            android:src="@drawable/frag40_img2"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:layout_width="15dp"
            android:layout_height="20dp"
            android:paddingTop="5dp"
            android:layout_marginTop="10dp"
            android:id="@+id/frag42_bul1"
            android:layout_below="@+id/imageView64"
            android:layout_alignLeft="@+id/imageView64"
            android:layout_alignStart="@+id/imageView64"
            android:src="#a8cf45" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/frag42pt1"
            android:id="@+id/frag42pt1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="180dp"
            android:layout_alignTop="@+id/frag42_bul1"
            android:layout_toRightOf="@+id/frag42_bul1" />

        <ImageView
            android:layout_width="15dp"
            android:layout_height="20dp"
            android:id="@+id/frag42_bul2"
            android:layout_marginTop="10dp"
            android:paddingTop="5dp"
            android:layout_below="@+id/frag42pt1"
            android:layout_alignLeft="@+id/frag42_bul1"
            android:layout_alignStart="@+id/frag42_bul1"
            android:src="#A8CF45" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/frag42pt2"
            android:id="@+id/frag42pt2"
            android:layout_alignTop="@+id/frag42_bul2"
            android:layout_alignLeft="@+id/frag42pt1"
            android:layout_alignStart="@+id/frag42pt1" />

        <ImageView
            android:layout_width="15dp"
            android:layout_height="20dp"
            android:paddingTop="5dp"
            android:layout_marginTop="10dp"
            android:id="@+id/frag42_bul3"
            android:layout_below="@+id/frag42pt2"
            android:layout_alignLeft="@+id/frag42_bul2"
            android:layout_alignStart="@+id/frag42_bul2"
            android:src="#A8CF45" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/frag42pt3"
            android:id="@+id/frag42pt3"
            android:layout_alignTop="@+id/frag42_bul3"
            android:layout_alignLeft="@+id/frag42pt2"
            android:layout_alignStart="@+id/frag42pt2" />

        <ImageView
            android:layout_width="15dp"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:paddingTop="5dp"
            android:id="@+id/frag42_bul4"
            android:layout_below="@+id/frag42pt3"
            android:layout_alignLeft="@+id/frag42_bul3"
            android:layout_alignStart="@+id/frag42_bul3"
            android:src="#A8CF45" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/frag42pt4"
            android:id="@+id/frag42pt4"
            android:layout_alignTop="@+id/frag42_bul4"
            android:layout_alignLeft="@+id/frag42pt3"
            android:layout_alignStart="@+id/frag42pt3" />

        <ImageView
            android:layout_width="15dp"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:paddingTop="5dp"
            android:id="@+id/frag42_bul5"
            android:layout_below="@+id/frag42pt4"
            android:layout_alignLeft="@+id/frag42_bul4"
            android:layout_alignStart="@+id/frag42_bul4"
            android:src="#A8CF45" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/frag42pt5"
            android:id="@+id/frag42pt5"
            android:layout_marginRight="20dp"
            android:layout_alignTop="@+id/frag42_bul5"
            android:layout_alignLeft="@+id/frag42pt4"
            android:layout_alignStart="@+id/frag42pt4" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/back"
            android:rotation="180"
            android:layout_below="@+id/frag42pt5"
            android:layout_alignLeft="@+id/frag42_bul5"
            android:layout_alignStart="@+id/frag42_bul5"
            android:src="@drawable/arw" />


    </RelativeLayout>
</FrameLayout>