<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/conk"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Fragments.Fragment_41">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <include layout="@layout/back_1"></include>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView63"
            android:layout_marginLeft="41dp"
            android:layout_marginStart="41dp"
            android:layout_marginTop="64dp"
            android:src="@drawable/frag40_img1"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:layout_width="15dp"
            android:layout_height="20dp"
            android:id="@+id/frag41_bul1"
            android:paddingTop="5dp"
            android:layout_below="@+id/imageView63"
            android:layout_alignLeft="@+id/imageView63"
            android:layout_alignStart="@+id/imageView63"
            android:layout_marginTop="14dp"
            android:src="#f58634" />

        <TextView
            android:layout_width="700dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/frag41pt1"
            android:id="@+id/frag41pt1"
            android:layout_marginLeft="10dp"
            android:layout_alignTop="@+id/frag41_bul1"
            android:layout_toRightOf="@+id/frag41_bul1"
            android:layout_toEndOf="@+id/frag41_bul1" />

        <ImageView
            android:layout_width="15dp"
            android:layout_height="20dp"
            android:id="@+id/frag41_bul2"
            android:paddingTop="5dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/frag41pt1"
            android:layout_alignLeft="@+id/frag41_bul1"
            android:layout_alignStart="@+id/frag41_bul1"
            android:src="#f58634" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/frag41pt2"
            android:id="@+id/frag41pt2"
            android:layout_alignTop="@+id/frag41_bul2"
            android:layout_alignLeft="@+id/frag41pt1"
            android:layout_alignStart="@+id/frag41pt1"
            android:layout_alignRight="@+id/frag41pt1"
            android:layout_alignEnd="@+id/frag41pt1" />

        <ImageView
            android:layout_width="15dp"
            android:layout_height="20dp"
            android:id="@+id/frag41_bul3"
            android:layout_marginTop="10dp"
            android:paddingTop="5dp"
            android:layout_below="@+id/frag41pt2"
            android:layout_alignLeft="@+id/frag41_bul2"
            android:layout_alignStart="@+id/frag41_bul2"
            android:src="#f58634" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/frag41pt3"
            android:id="@+id/frag41pt3"
            android:layout_alignTop="@+id/frag41_bul3"
            android:layout_alignLeft="@+id/frag41pt2"
            android:layout_alignStart="@+id/frag41pt2" />

        <ImageView
            android:layout_width="15dp"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:paddingTop="5dp"
            android:id="@+id/frag41_bul4"
            android:layout_below="@+id/frag41pt3"
            android:layout_alignLeft="@+id/frag41_bul3"
            android:layout_alignStart="@+id/frag41_bul3"
            android:src="#f58634" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/frag41pt4"
            android:id="@+id/frag41pt4"
            android:layout_alignTop="@+id/frag41_bul4"
            android:layout_alignLeft="@+id/frag41pt3"
            android:layout_alignStart="@+id/frag41pt3" />

        <ImageView
            android:layout_width="15dp"
            android:layout_height="20sp"
            android:paddingTop="5dp"
            android:layout_marginTop="10dp"
            android:id="@+id/frag41_bul5"
            android:layout_below="@+id/frag41pt4"
            android:layout_alignLeft="@+id/frag41_bul4"
            android:layout_alignStart="@+id/frag41_bul4"
            android:src="#f58634" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/frag41pt5"
            android:id="@+id/frag41pt5"
            android:layout_alignTop="@+id/frag41_bul5"
            android:layout_alignLeft="@+id/frag41pt4"
            android:layout_alignStart="@+id/frag41pt4" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/back"
            android:rotation="180"
            android:layout_below="@+id/frag41pt5"
            android:layout_alignLeft="@+id/frag41_bul5"
            android:layout_alignStart="@+id/frag41_bul5"
            android:layout_marginTop="49dp"
            android:src="@drawable/arw" />


    </RelativeLayout>
</FrameLayout>